refactor: Improve project metadata and styling
This commit updates the project's `package.json` and `metadata.json` to reflect the correct project name "SkyFocus: The Ultimate Flight Focus Pomodoro".

Additionally, it refactors styling within `index.html` to streamline glassmorphism effects and adjust the 3D airplane silhouette's appearance for better visual appeal. The `geoUtils` functions have also been updated with edge case handling for zero distance.

Finally, the `App.tsx` component introduces useCallback for performance optimization on functions like `terminateFlight` and `startFlight`. It also refines the countdown logic in the `useEffect` hook for more robust timer management.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skyyyfocus",
+  "name": "skyfocus:-the-ultimate-flight-focus-pomodoro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
